🐛 Fixed overflow-x hidden style to body to prevent horizontal scrolling

--- a/src/app.css
+++ b/src/app.css
@@ -73,3 +73,7 @@
     @apply bg-background text-foreground;
   }
 }
+
+body{
+  overflow-x: hidden;
+}
